--- a/ApiEasier.Server/appsettings.json
+++ b/ApiEasier.Server/appsettings.json
@@ -3,6 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
+      //"ApiEasier.Server.Services": "Information"
       "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
     }
   },
