Finnaly, LOGS COMPLETED! (I think)

--- a/ApiEasier.Server/appsettings.json
+++ b/ApiEasier.Server/appsettings.json
@@ -3,13 +3,14 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      //"ApiEasier.Server.Services": "Information"
       "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
     }
   },
   "AllowedHosts": "*",
   "DatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "apiEasier"
+    "DatabaseName": "apiEasier",
+    "LogsDatabaseName": "logsApiEasier",
+    "LogsCollectionName": "httpLogs"
   }
 }
