add file system watcher

--- a/ApiEasier.Server/appsettings.json
+++ b/ApiEasier.Server/appsettings.json
@@ -9,5 +9,6 @@
   "DatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "apiEasier"
-  }
+  },
+  "JsonDirectoryPath" : "configuration"
 }
