--- a/ApiEasier.Bll/ApiEasier.Bll.csproj
+++ b/ApiEasier.Bll/ApiEasier.Bll.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ApiEasier.Dal\ApiEasier.Dal.csproj" />
+  </ItemGroup>
+
 </Project>
