--- a/ApiEasier.Server/ApiEasier.Api.csproj
+++ b/ApiEasier.Server/ApiEasier.Api.csproj
@@ -11,16 +11,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="configuration\**" />
+    <Content Remove="configuration\**" />
+    <EmbeddedResource Remove="configuration\**" />
+    <None Remove="configuration\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
     <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
     <PackageReference Include="NJsonSchema" Version="11.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="configuration\" />
   </ItemGroup>
 
   <ItemGroup>
