--- a/ApiEasier.Dal/ApiEasier.Dal.csproj
+++ b/ApiEasier.Dal/ApiEasier.Dal.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\ApiEasier.Dm\ApiEasier.Dm.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
