--- a/ApiEasier.Server/appsettings.json
+++ b/ApiEasier.Server/appsettings.json
@@ -13,5 +13,5 @@
     "LogsDatabaseName": "logsApiEasier",
     "LogsCollectionName": "httpLogs"
   },
-  "JsonDirectoryPath" : "configuration"
+  "JsonDirectoryPath" : "ApiConfigurations"
 }
