--- a/.gitignore
+++ b/.gitignore
@@ -364,4 +364,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-./src/ApiEasier.Api//ApiConfigurations/*
+./src/ApiEasier.Api/ApiConfigurations/*
