--- a/src/ApiEasier.Api/nlog.config
+++ b/src/ApiEasier.Api/nlog.config
@@ -1,14 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-
+  
+    <extensions>
+        <add assembly="NLog.Mongo"/>
+    </extensions>
+  
   <targets async="true">
-    <target name="logfile" xsi:type="File" fileName="file.txt" />
-    <target name="logconsole" xsi:type="Console" />
+    <target name="errorFile" xsi:type="File" fileName="error.txt" />
+    <target name="logconsole" xsi:type="Console">
+      <layout>${longdate} ${level} ${message}</layout>
+    </target>
+    <target xsi:type="Mongo"
+      name="mongolog"
+      connectionString="mongodb://localhost:27017"
+      collectionName="logs"
+      databaseName="ntauthlog"
+      cappedCollectionSize="26214400"
+      includeDefaults="false">
+      <field name="LogLevel" layout="${level}" bsonType="String"/>
+      <field name="EventId" layout="${event-properties:EventId}" bsonType="Int32"/>
+      <field name="Timestamp" layout="${longdate}" bsonType="DateTime"/>
+      <field name="Protocol" layout="${event-properties:Protocol}" bsonType="String"/>
+      <field name="Method" layout="${event-properties:Method}" bsonType="String"/>
+      <field name="Scheme" layout="${event-properties:Scheme}" bsonType="String"/>
+      <field name="PathBase" layout="${event-properties:PathBase}" bsonType="String"/>
+      <field name="Path" layout="${event-properties:Path}" bsonType="String"/>
+      <field name="QueryString" layout="${event-properties:QueryString}" bsonType="String"/>
+      <field name="Headers" layout="${event-properties:Headers}" bsonType="Object"/>
+      <field name="ContentType" layout="${event-properties:ContentType}" bsonType="String"/>
+      <field name="Duration" layout="${event-properties:Duration}" bsonType="Double"/>
+      <field name="ResponseCode" layout="${event-properties:ResponseCode}" bsonType="Int32"/>
+    </target>
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Info" writeTo="logfile" />
-    <logger name="*" minlevel="Info" writeTo="logconsole" />
+    <logger name="*" minlevel="Debug" writeTo="logconsole" />
+    <logger name="*" minlevel="Error" writeTo="errorFile" />
+    <logger name="*" minlevel="Info" writeTo="mongolog"/>
   </rules>
 </nlog>
