add message to mongologs

--- a/src/ApiEasier.Api/nlog.config
+++ b/src/ApiEasier.Api/nlog.config
@@ -19,6 +19,7 @@
       cappedCollectionSize="26214400"
       includeDefaults="false">
       <field name="LogLevel" layout="${level}" bsonType="String"/>
+      <field name="Message" layout="${Message}" bsonType="String"/>
       <field name="EventId" layout="${event-properties:EventId}" bsonType="Int32"/>
       <field name="Timestamp" layout="${longdate}" bsonType="DateTime"/>
       <field name="Protocol" layout="${event-properties:Protocol}" bsonType="String"/>
