--- a/src/ApiEasier.Api/nlog.config
+++ b/src/ApiEasier.Api/nlog.config
@@ -8,14 +8,14 @@
   
   <targets async="true">
     <target name="errorFile" xsi:type="File" fileName="error.txt" />
-    <target name="logconsole" xsi:type="Console">
-      <layout>${longdate} ${level} ${message}</layout>
+    <target name="logconsole" xsi:type="ColoredConsole">
+      <layout>${longdate} | ${level:uppercase=true} | ${message}</layout>
     </target>
     <target xsi:type="Mongo"
-      name="mongolog"
+      name="httpLogsMongo"
       connectionString="mongodb://localhost:27017"
-      collectionName="logs"
-      databaseName="ntauthlog"
+      collectionName="httpLogs"
+      databaseName="ApiEasierLogs"
       cappedCollectionSize="26214400"
       includeDefaults="false">
       <field name="LogLevel" layout="${level}" bsonType="String"/>
@@ -28,16 +28,27 @@
       <field name="PathBase" layout="${event-properties:PathBase}" bsonType="String"/>
       <field name="Path" layout="${event-properties:Path}" bsonType="String"/>
       <field name="QueryString" layout="${event-properties:QueryString}" bsonType="String"/>
-      <field name="Headers" layout="${event-properties:Headers}" bsonType="Object"/>
       <field name="ContentType" layout="${event-properties:ContentType}" bsonType="String"/>
       <field name="Duration" layout="${event-properties:Duration}" bsonType="Double"/>
       <field name="ResponseCode" layout="${event-properties:ResponseCode}" bsonType="Int32"/>
+    </target>
+    <target xsi:type="Mongo"
+      name="errorLogsMongo"
+      connectionString="mongodb://localhost:27017"
+      collectionName="errorLogs"
+      databaseName="ApiEasierLogs"
+      cappedCollectionSize="26214400"
+      includeDefaults="false">
+      <field name="LogLevel" layout="${level}" bsonType="String"/>
+      <field name="Message" layout="${Message}" bsonType="String"/>
+      <field name="Timestamp" layout="${longdate}" bsonType="DateTime"/>
+      <field name="Exception" layout="${exception:format=ToString}" bsonType="String"/>
     </target>
   </targets>
 
   <rules>
     <logger name="*" minlevel="Debug" writeTo="logconsole" />
-    <logger name="*" minlevel="Error" writeTo="errorFile" />
-    <logger name="*" minlevel="Info" writeTo="mongolog"/>
+    <logger name="*" minlevel="Error" writeTo="errorFile,errorLogsMongo" />
+    <logger name="*" levels="Info" writeTo="httpLogsMongo"/>
   </rules>
 </nlog>
