--- a/src/ApiEasier.Bll/ApiEasier.Bll.csproj
+++ b/src/ApiEasier.Bll/ApiEasier.Bll.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
     <PackageReference Include="NJsonSchema" Version="11.1.0" />
     <PackageReference Include="NLog" Version="5.4.0" />
     <PackageReference Include="NLog.Mongo" Version="5.0.0" />
