--- a/src/ApiEasier.Dal/ApiEasier.Dal.csproj
+++ b/src/ApiEasier.Dal/ApiEasier.Dal.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ApiEasier.Dm\ApiEasier.Dm.csproj" />
+    <ProjectReference Include="..\ApiEasier.Logger\ApiEasier.Logger.csproj" />
   </ItemGroup>
 
 </Project>
