--- a/src/ApiEasier.Api/Dockerfile
+++ b/src/ApiEasier.Api/Dockerfile
@@ -12,4 +12,4 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 
 COPY --from=build /app ./
-ENTRYPOINT ["dotnet", "ApiEasier.Server.dll"]
+ENTRYPOINT ["dotnet", "ApiEasier.Api.dll"]
