--- a/src/ApiEasier.Api/Dockerfile
+++ b/src/ApiEasier.Api/Dockerfile
@@ -1,21 +1,31 @@
+# Базовый образ для сборки
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /source
 
-COPY ../ApiEasier.Bll/ApiEasier.Bll.csproj ApiEasier.Bll/
-COPY ../ApiEasier.Dal/ApiEasier.Dal.csproj ApiEasier.Dal/
-COPY ../ApiEasier.Dm/ApiEasier.Dm.csproj ApiEasier.Dm/
-COPY ../ApiEasier.Logger/ApiEasier.Logger.csproj ApiEasier.Logger/
-COPY ApiEasier.Api.csproj ./
+# Копируем все .csproj файлы сразу, чтобы ускорить кеширование
+COPY ApiEasier.Api/ApiEasier.Api.csproj ApiEasier.Api/
+COPY ApiEasier.Bll/ApiEasier.Bll.csproj ApiEasier.Bll/
+COPY ApiEasier.Dal/ApiEasier.Dal.csproj ApiEasier.Dal/
+COPY ApiEasier.Dm/ApiEasier.Dm.csproj ApiEasier.Dm/
+COPY ApiEasier.Logger/ApiEasier.Logger.csproj ApiEasier.Logger/
 
-RUN dotnet restore ApiEasier.Api.csproj
+# Восстанавливаем зависимости
+WORKDIR /source/ApiEasier.Api
+RUN dotnet restore
 
-COPY ../ ./
+# Копируем весь код проекта
+WORKDIR /source
+COPY . .
 
+# Сборка и публикация
 RUN dotnet publish -c Release -o /app --no-restore
 
+# Базовый образ для запуска
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 
+# Копируем собранный код
 COPY --from=build /app ./
 
+# Запуск приложения
 ENTRYPOINT ["dotnet", "ApiEasier.Api.dll"]
