--- a/src/ApiEasier.Api/Dockerfile
+++ b/src/ApiEasier.Api/Dockerfile
@@ -2,8 +2,8 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /source
 
-# Копируем все .csproj файлы сразу, чтобы ускорить кеширование
-COPY ApiEasier.Api.csproj ApiEasier.Api/
+# Копируем все .csproj файлы (УЧИТЫВАЕМ, что Dockerfile внутри ApiEasier.Api)
+COPY ../ApiEasier.Api/ApiEasier.Api.csproj ApiEasier.Api/
 COPY ../ApiEasier.Bll/ApiEasier.Bll.csproj ApiEasier.Bll/
 COPY ../ApiEasier.Dal/ApiEasier.Dal.csproj ApiEasier.Dal/
 COPY ../ApiEasier.Dm/ApiEasier.Dm.csproj ApiEasier.Dm/
@@ -15,7 +15,7 @@ RUN dotnet restore
 
 # Копируем весь код проекта
 WORKDIR /source
-COPY . .
+COPY ../ ./
 
 # Сборка и публикация
 RUN dotnet publish -c Release -o /app --no-restore
