--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       - "5240:8080"
     image: apieasier_api
     build:
-      context: ./src/ApiEasier.Api/.
-      dockerfile: Dockerfile
+      context: ./src 
+      dockerfile: ApiEasier.Api/Dockerfile
     volumes:
       - ./configs:/app/configuration
     env_file:
