--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,6 +38,9 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    env_file:
+      - path: ./environment/nginx.env
+        required: true
 
 
 networks:
