--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
     location /api {
-        proxy_pass ${API_URL};
+        proxy_pass http://sh4r1k.ru:52240;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,7 +17,7 @@ server {
     }
 
     location /hubs {
-        proxy_pass ${API_URL};
+        proxy_pass http://sh4r1k.ru:52240;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
