--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,6 @@ services:
     container_name: apieasier_api
     hostname: apieasier_api
     restart: always
-    # ports:
-    #   - "5240:8080"
     image: apieasier_api
     build:
       context: ./src 
@@ -16,6 +14,7 @@ services:
         required: true
     networks:
       - backend
+      - frontend 
   mongodb:
     image: mongo:4.4
     hostname: mongodb
@@ -38,9 +37,14 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - frontend 
 
 
 networks:
   backend:
+    external: false
+    driver: bridge
+  frontend:
     external: false
     driver: bridge
