--- a/src/ApiEasier.Api/nlog.config
+++ b/src/ApiEasier.Api/nlog.config
@@ -13,7 +13,7 @@
     </target>
     <target xsi:type="Mongo"
       name="httpLogsMongo"
-      connectionString="mongodb://localhost:27017"
+      connectionString="mongodb://mongodb:27017"
       collectionName="httpLogs"
       databaseName="ApiEasierLogs"
       cappedCollectionSize="26214400"
