tests found problem :(

--- a/tests/ApiEasier.Tests/ApiEasier.Tests.csproj
+++ b/tests/ApiEasier.Tests/ApiEasier.Tests.csproj
@@ -28,6 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Integration\Tests\ApiEntity\" />
+    <Folder Include="Integration\Tests\ApiEndpoint\" />
+    <Folder Include="Integration\Tests\ApiEmu\" />
     <Folder Include="Unit\" />
   </ItemGroup>
 
